updated script and og/twitter cards

--- a/pages/about.html
+++ b/pages/about.html
@@ -3,25 +3,27 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Genny Allison | Front End Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Learn more about Genny Allison, a Full Stack Developer blending technical expertise with creativity. With a unique background in design, business, and web development, Genny crafts responsive, user-friendly websites and applications that enhance digital experiences. Explore her journey, skills, and dedication to impactful technology solutions." />
+    <title>Genny Allison | Front End Developer</title>
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
-    <!-- Open Graph Meta Tags -->
+    <!-- Open Graph -->
     <meta property="og:type" content="profile" />
-    <meta property="og:title" content="About Genny Allison | AI-Powered SEO Specialist & Front End Developer" />
-    <meta property="og:description" content="Get to know Genny Allison—an SEO and AI content expert with a passion for web performance, accessibility, and engaging digital experiences. Discover the story behind her career journey." />
+    <meta property="og:title" content="About Genny Allison | AI Content Creator & SEO Specialist" />
+    <meta property="og:description" content="Meet Genny Allison — an AI-powered content creator, SEO specialist, and front-end developer. Explore her journey, skills, and projects." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/about.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749314349/genny-about-portrait_qu2vcz.avif" />
-    <meta property="og:image:alt" content="Portrait of Genny Allison representing her blend of creativity and coding in her personal story" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749314349/genny-about-portrait_qu2vcz.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Portrait of Genny Allison, AI content and SEO specialist" />
 
-    <!-- Twitter Card Meta Tags -->
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="About Genny Allison | AI SEO Content Creator & Developer" />
-    <meta name="twitter:description" content="Learn about Genny Allison’s background, passion for accessible design, SEO, and AI-powered content strategy. An inside look into the creator behind the portfolio." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749314349/genny-about-portrait_qu2vcz.avif" />
-    <meta name="twitter:image:alt" content="Genny Allison's personal photo, featured on the About Me page" />
-    <meta name="twitter:site" content="@allis78978" />
+    <meta name="twitter:title" content="About Genny Allison | AI Content Creator & SEO Specialist" />
+    <meta name="twitter:description" content="Explore Genny's story as an AI-powered content creator and front-end developer focused on high-performance, SEO-optimized websites." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749314349/genny-about-portrait_qu2vcz.jpg" />
+    <meta name="twitter:image:alt" content="Portrait of Genny Allison, AI content and SEO specialist" />
+
 
 
     <link class="tab-logo" rel="icon" href="/img/white_favicon/favicon.ico" type="image/icon type">
@@ -241,12 +243,17 @@
         "name": "About Genny Allison | AI-Powered SEO Specialist & Front End Developer",
         "url": "https://gennyallison.netlify.app/pages/about.html",
         "description": "Learn about Genny Allison, an AI-powered content creator, SEO specialist, and front-end developer. Discover her story, skills, and passion for fast, accessible, high-performance websites.",
-        "about": {
+        "author": {
           "@type": "Person",
           "name": "Genny Allison",
           "jobTitle": "AI Content Creator, SEO Specialist, Front End Developer",
           "url": "https://gennyallison.netlify.app",
-          "image": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_640,h_640/v1749314349/genny-about-portrait_qu2vcz.avif",
+          "image": {
+            "@type": "ImageObject",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_640,h_640/v1749314349/genny-about-portrait_qu2vcz.avif",
+            "width": 640,
+            "height": 640
+          },
           "sameAs": [
             "https://github.com/Allison2002",
             "https://www.linkedin.com/in/genny-allison/",
@@ -265,7 +272,9 @@
           "url": "https://gennyallison.netlify.app",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_484,h_210/v1746550266/allisonstock-logo_xgohg9.avif"
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_484,h_210/v1746550266/allisonstock-logo_xgohg9.avif",
+            "width": 484,
+            "height": 210
           }
         },
         "primaryImageOfPage": {
@@ -277,6 +286,7 @@
         }
       }
     </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
