--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tech Trends Project | AI Content & SEO Portfolio Project by Genny Allison</title>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Project 1: Tech Trends | AI Content & SEO Portfolio Project by Genny Allison" />
+    <meta property="og:description" content="Explore how Genny Allison applied AI content creation, SEO optimization, and Core Web Vitals techniques to build the Tech Trends project — a standout in her front-end and AI content portfolio." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project1/project1-intro" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.jpg" />
+    <meta property="og:site_name" content="Genny Allison Portfolio" />
+
     <meta name="description" content="Dive into Tech Trends Blog, a performance-optimized project by Genny Allison showcasing AI content creation, SEO strategy, and responsive web design. Explore how creativity and cutting-edge tools like ChatGPT and Midjourney power a modern, accessible blog experience.">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -69,17 +77,12 @@
       {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "name": "Tech Trends Project | AI Content & SEO Portfolio Project by Genny Allison",
-        "url": "https://tech-trends-blog.netlify.app",
-        "description": "Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions.",
+        "name": "Project 1: Tech Trends | AI Content & SEO Portfolio Project by Genny Allison",
+        "url": "https://gennyallison.netlify.app/pages/project1/project1-intro",
+        "description": "Explore how Genny Allison applied AI content generation, SEO optimization, and performance techniques to build the Tech Trends project — part of her front-end and AI content portfolio.",
         "inLanguage": "en",
         "datePublished": "2024-11-15",
         "dateModified": "2025-05-19",
-        "isPartOf": {
-          "@type": "Blog",
-          "name": "Tech Trends Blog",
-          "url": "https://tech-trends-blog.netlify.app"
-        },
         "breadcrumb": {
           "@type": "BreadcrumbList",
           "itemListElement": [
@@ -87,13 +90,13 @@
               "@type": "ListItem",
               "position": 1,
               "name": "Home",
-              "item": "https://tech-trends-blog.netlify.app"
+              "item": "https://gennyallison.netlify.app"
             },
             {
               "@type": "ListItem",
               "position": 2,
               "name": "Projects",
-              "item": "https://tech-trends-blog.netlify.app/projects"
+              "item": "https://gennyallison.netlify.app/pages/collections"
             }
           ]
         },
@@ -126,17 +129,18 @@
         },
         "mainEntity": {
           "@type": "CreativeWork",
-          "name": "Tech Trends Blog",
+          "name": "Tech Trends Project",
           "about": [
-            "AI Content Creation",
+            "AI Content Generation",
             "SEO Optimization",
-            "Web Performance",
-            "WCAG Accessibility",
-            "UI/UX Design"
+            "Core Web Vitals",
+            "Responsive Web Design",
+            "Performance Optimization"
           ]
         }
       }
     </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
