--- a/pages/project1/project1-the-design.html
+++ b/pages/project1/project1-the-design.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tech Trends Project | The Design | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Tech Trends Project – The Design | UI/UX & Performance Strategy by Genny Allison" />
+    <meta property="og:description" content="Explore the design breakdown of the Tech Trends Project by Genny Allison. Discover how UI/UX principles, accessibility, and visual strategy shaped this AI-powered portfolio site." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project1/project1-the-design" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.jpg" />
+    <meta property="og:image:alt" content="Tech Trends Design Overview by Genny Allison" />
+    <meta property="og:site_name" content="Genny Allison Portfolio" />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tech Trends Project – The Design | Genny Allison" />
+    <meta name="twitter:description" content="See how Genny Allison applied UI/UX design, responsive layout, and performance strategy to build a high-speed, accessible portfolio project." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.jpg" />
+    <meta name="twitter:image:alt" content="Design-focused case study from the Tech Trends portfolio project by Genny Allison" />
+    <meta name="twitter:site" content="@GennyAllison" />
+    <meta name="twitter:creator" content="@GennyAllison" />
 
     <meta name="description" content="Explore the design behind the Tech Trends Project by Genny Allison. This page highlights AI-powered layout, SEO-optimized visuals, responsive design techniques, and WCAG accessibility." />
 
@@ -69,16 +85,16 @@
       {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "name": "Tech Trends Project | AI Content & SEO Portfolio Project by Genny Allison",
-        "url": "https://tech-trends-blog.netlify.app",
-        "description": "Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions.",
+        "name": "Tech Trends Project Design Overview | Genny Allison",
+        "url": "https://gennyallison.netlify.app/pages/project1/project1-the-design",
+        "description": "Dive into the UI/UX design breakdown of the Tech Trends Project by Genny Allison. See how design strategy, structure, and visual flow guided the creation of a high-performance AI content portfolio.",
         "inLanguage": "en",
         "datePublished": "2024-11-15",
         "dateModified": "2025-05-19",
         "isPartOf": {
-          "@type": "Blog",
-          "name": "Tech Trends Blog",
-          "url": "https://tech-trends-blog.netlify.app"
+          "@type": "CollectionPage",
+          "name": "Genny Allison Portfolio Projects",
+          "url": "https://gennyallison.netlify.app/pages/collections"
         },
         "breadcrumb": {
           "@type": "BreadcrumbList",
@@ -87,13 +103,19 @@
               "@type": "ListItem",
               "position": 1,
               "name": "Home",
-              "item": "https://tech-trends-blog.netlify.app"
+              "item": "https://gennyallison.netlify.app"
             },
             {
               "@type": "ListItem",
               "position": 2,
               "name": "Projects",
-              "item": "https://tech-trends-blog.netlify.app/projects"
+              "item": "https://gennyallison.netlify.app/pages/collections"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Tech Trends Design Overview",
+              "item": "https://gennyallison.netlify.app/pages/project1/project1-the-design"
             }
           ]
         },
@@ -113,30 +135,31 @@
           "url": "https://gennyallison.netlify.app",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1746550616/allisonstock-black-logo_yalqqx.avif",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_531,h_255,dpr_auto,fl_lossy,fl_force_strip/v1746550616/allisonstock-black-logo_yalqqx.jpg",
             "width": 531,
             "height": 255
           }
         },
         "image": {
           "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.avif",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.jpg",
           "width": 748,
           "height": 400
         },
         "mainEntity": {
           "@type": "CreativeWork",
-          "name": "Tech Trends Blog",
+          "name": "Tech Trends Project – The Design",
           "about": [
-            "AI Content Creation",
-            "SEO Optimization",
-            "Web Performance",
-            "WCAG Accessibility",
-            "UI/UX Design"
+            "UI/UX Design",
+            "Responsive Layout",
+            "Web Accessibility",
+            "AI-Enhanced Branding",
+            "Performance-First Web Strategy"
           ]
         }
       }
     </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
