--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tech Trends Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Tech Trends Project – The Grade | 100/100 PageSpeed Score Breakdown by Genny Allison" />
+    <meta property="og:description" content="Discover how Genny Allison achieved a perfect 100/100 PageSpeed Insights score on her Tech Trends Project using SEO best practices, performance tuning, and WCAG design principles." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project1/project1-the-grade" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.jpg" />
+    <meta property="og:image:alt" content="Tech Trends Grade Page by Genny Allison showing performance and SEO achievements" />
+    <meta property="og:site_name" content="Genny Allison Portfolio" />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tech Trends Project – The Grade | 100/100 PageSpeed SEO Case Study" />
+    <meta name="twitter:description" content="Genny Allison explains how she optimized the Tech Trends Project for top PageSpeed Insights and SEO scores through AI content, LCP, CLS, and Core Web Vitals tuning." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.jpg" />
+    <meta name="twitter:image:alt" content="Portfolio Case Study: 100 PageSpeed Score – Tech Trends by Genny Allison" />
+    <meta name="twitter:site" content="@GennyAllison" />
+    <meta name="twitter:creator" content="@GennyAllison" />
 
     <meta name="description" content="Genny Allison's AI Content Creator & SEO Specialist portfolio project showcases how she achieved a 100/100 PageSpeed Insights score through Core Web Vitals optimization, performance-driven design, and AI-powered image and content enhancements.">
 
@@ -70,16 +86,16 @@
       {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "name": "Tech Trends Project | AI Content & SEO Portfolio Project by Genny Allison",
-        "url": "https://tech-trends-blog.netlify.app",
-        "description": "Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions.",
+        "name": "Tech Trends Project – The Grade | PageSpeed & SEO Score Breakdown by Genny Allison",
+        "url": "https://gennyallison.netlify.app/pages/project1/project1-the-grade",
+        "description": "Explore how Genny Allison achieved a perfect 100/100 Google PageSpeed Insights score on the Tech Trends Project. See the techniques and SEO strategies used to optimize performance and accessibility.",
         "inLanguage": "en",
         "datePublished": "2024-11-15",
         "dateModified": "2025-05-19",
         "isPartOf": {
-          "@type": "Blog",
-          "name": "Tech Trends Blog",
-          "url": "https://tech-trends-blog.netlify.app"
+          "@type": "CollectionPage",
+          "name": "Genny Allison Portfolio Projects",
+          "url": "https://gennyallison.netlify.app/pages/collections"
         },
         "breadcrumb": {
           "@type": "BreadcrumbList",
@@ -88,13 +104,19 @@
               "@type": "ListItem",
               "position": 1,
               "name": "Home",
-              "item": "https://tech-trends-blog.netlify.app"
+              "item": "https://gennyallison.netlify.app"
             },
             {
               "@type": "ListItem",
               "position": 2,
               "name": "Projects",
-              "item": "https://tech-trends-blog.netlify.app/projects"
+              "item": "https://gennyallison.netlify.app/pages/collections"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Tech Trends – The Grade",
+              "item": "https://gennyallison.netlify.app/pages/project1/project1-the-grade"
             }
           ]
         },
@@ -114,30 +136,31 @@
           "url": "https://gennyallison.netlify.app",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1746550616/allisonstock-black-logo_yalqqx.avif",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_531,h_255,dpr_auto,fl_lossy,fl_force_strip/v1746550616/allisonstock-black-logo_yalqqx.jpg",
             "width": 531,
             "height": 255
           }
         },
         "image": {
           "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.avif",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.jpg",
           "width": 748,
           "height": 400
         },
         "mainEntity": {
           "@type": "CreativeWork",
-          "name": "Tech Trends Blog",
+          "name": "Tech Trends Project – The Grade",
           "about": [
-            "AI Content Creation",
-            "SEO Optimization",
-            "Web Performance",
-            "WCAG Accessibility",
-            "UI/UX Design"
+            "PageSpeed Insights Optimization",
+            "Core Web Vitals",
+            "SEO Score Improvements",
+            "AI Content Performance",
+            "WCAG Compliance"
           ]
         }
       }
     </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
