--- a/pages/project2/project2-the-casestudy.html
+++ b/pages/project2/project2-the-casestudy.html
@@ -11,18 +11,22 @@
 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
 
-    <meta property="og:title" content="Sports Tube Video Blog Project Case Study | Genny Allison | AI Content & SEO Portfolio" />
-    <meta property="og:description" content="Discover how Genny Allison, an AI Content Creator & SEO Specialist, used AI tools, SEO optimization, and responsive design to elevate Sports Tube from a 35 to a perfect 100 PageSpeed score." />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748537741/sports-tube-desktop_c9qmdx.avif" />
-    <meta property="og:url" content="https://sports-tube.netlify.app/" />
+    <!-- Open Graph Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Genny Allison Portfolio" />
+    <meta property="og:title" content="Sports Tube Video Blog Project Case Study | Genny Allison" />
+    <meta property="og:description" content="Explore how Genny Allison used AI content tools and SEO strategy to achieve a 100/100 PageSpeed score for this sports blog platform." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project2/project2-the-casestudy" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748537741/sports-tube-desktop_c9qmdx.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
+    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Sports Tube Video Blog Case Study | AI SEO Portfolio by Genny Allison" />
-    <meta name="twitter:description" content="Case study of the Sports Tube video platform, where AI-generated content and SEO strategies drove performance from a 35 to 100. Built by Genny Allison, AI Content Creator & SEO Specialist." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748537741/sports-tube-desktop_c9qmdx.avif" />
-    <meta name="twitter:site" content="@allis78978" />
+    <meta name="twitter:title" content="Sports Tube Video Blog Project Case Study | Genny Allison" />
+    <meta name="twitter:description" content="Explore how AI-powered content and SEO transformed a sports blog into a high-performance site with perfect PageSpeed scores." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748537741/sports-tube-desktop_c9qmdx.jpg" />
+    <meta name="twitter:creator" content="@allis78978" />
+
 
     <!-- Desktop ≥ 941px -->
     <link
@@ -84,7 +88,7 @@
         "@context": "https://schema.org",
         "@type": "WebPage",
         "name": "Sports Tube Video Blog Project Case Study",
-        "url": "https://sports-tube.netlify.app/",
+        "url": "https://gennyallison.netlify.app/pages/project2/project2-the-casestudy",
         "description": "Explore the Sports Tube Video Blog case study by Genny Allison, an AI Content Creator & SEO Specialist. See how AI tools and SEO-focused strategies transformed a sports video platform into a high-performance, accessible site with 100/100 PageSpeed scores.",
         "author": {
           "@type": "Person",
@@ -141,6 +145,7 @@
         }
       }
     </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
