--- a/pages/project2/project2-the-design.html
+++ b/pages/project2/project2-the-design.html
@@ -10,17 +10,23 @@
 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
 
-    <meta property="og:title" content="Sports Tube Video Blog Design | AI Content & SEO Portfolio | Genny Allison" />
-    <meta property="og:description" content="Discover how Genny Allison designed the Sports Tube Video Blog using AI-generated content, SEO best practices, and responsive UI techniques. See wireframes, mood boards, and the creative vision behind the project." />
+        <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tech-trends-blog.netlify.app/pages/project2/project2-the-design.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748537741/sports-tube-desktop_c9qmdx.avif" />
+    <meta property="og:title" content="Sports Tube Video Blog Design | AI Content & SEO Portfolio | Genny Allison" />
+    <meta property="og:description" content="Explore the design and wireframe of the Sports Tube Video Blog by AI Content Creator & SEO Specialist Genny Allison. This page highlights responsive layout, AI-generated visuals, and SEO-optimized UI for high-performing, fast-loading websites." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project2/project2-the-design.html" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Genny Allison Portfolio" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Sports Tube Video Blog Design | AI Content & SEO Portfolio | Genny Allison" />
-    <meta name="twitter:description" content="View the Sports Tube Video Blog design page by Genny Allison—featuring wireframes, mood boards, and an SEO-optimized, AI-powered layout for a modern sports blog." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748537741/sports-tube-desktop_c9qmdx.avif" />
-    <meta name="twitter:site" content="@allis78978" />
+    <meta name="twitter:description" content="Explore the design and wireframe of the Sports Tube Video Blog by AI Content Creator & SEO Specialist Genny Allison. This page highlights responsive layout, AI-generated visuals, and SEO-optimized UI for high-performing, fast-loading websites." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta name="twitter:creator" content="@allis78978" />
+
 
     <!-- Desktop ≥ 941px -->
     <link
@@ -82,9 +88,10 @@
         "@context": "https://schema.org",
         "@type": "WebPage",
         "name": "Sports Tube Video Blog Design | AI Content & SEO Portfolio | Genny Allison",
-        "url": "https://tech-trends-blog.netlify.app/pages/project2/project2-the-design.html",
+        "url": "https://gennyallison.netlify.app/pages/project2/project2-the-design.html",
         "description": "Explore the design and wireframe of the Sports Tube Video Blog by AI Content Creator & SEO Specialist Genny Allison. This page highlights responsive layout, AI-generated visuals, and SEO-optimized UI for high-performing, fast-loading websites.",
         "datePublished": "2025-06-03",
+        "inLanguage": "en",
         "author": {
           "@type": "Person",
           "name": "Genny Allison",
@@ -107,10 +114,16 @@
             "height": 109
           }
         },
+        "image": {
+          "@type": "ImageObject",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_1458,h_948/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif",
+          "width": 1458,
+          "height": 948
+        },
         "mainEntity": {
           "@type": "CreativeWork",
           "name": "Sports Tube Video Blog Project",
-          "url": "https://tech-trends-blog.netlify.app",
+          "url": "https://gennyallison.netlify.app/pages/project2/project2-intro.html",
           "description": "A portfolio project showcasing the design, wireframe, and performance-focused layout of the Sports Tube Video Blog. Developed by Genny Allison using AI-generated content and SEO-driven techniques."
         },
         "breadcrumb": {
@@ -132,18 +145,19 @@
               "@type": "ListItem",
               "position": 3,
               "name": "Sports Tube Project",
-              "item": "https://tech-trends-blog.netlify.app"
+              "item": "https://gennyallison.netlify.app/pages/project2/project2-intro.html"
             },
             {
               "@type": "ListItem",
               "position": 4,
               "name": "The Design",
-              "item": "https://tech-trends-blog.netlify.app/pages/project2/project2-the-design.html"
+              "item": "https://gennyallison.netlify.app/pages/project2/project2-the-design.html"
             }
           ]
         }
       }
     </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
