--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -3,8 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Sports Tube Video Blog Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
     <meta name="description" content="Discover how Genny Allison achieved a perfect 100/100 PageSpeed Insights score using AI-powered content, SEO optimization strategies, and Core Web Vitals improvements. This case study highlights performance-driven web design and image enhancements for fast, responsive websites.">
+    <title>Sports Tube Video Blog Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
+    <!-- Open Graph Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Sports Tube Video Blog – The Grade | AI Content & SEO Portfolio | Genny Allison" />
+    <meta property="og:description" content="Discover how Genny Allison achieved a perfect 100/100 Google PageSpeed Insights score using AI-generated content and SEO optimization strategies in the Sports Tube Video Blog project." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project2/project2-the-grade" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748537741/sports-tube-desktop-score.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sports Tube Video Blog – The Grade | AI Content & SEO Portfolio | Genny Allison" />
+    <meta name="twitter:description" content="See how Genny Allison used AI and SEO to earn a perfect 100/100 PageSpeed score for the Sports Tube project." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748537741/sports-tube-desktop-score.jpg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
 
@@ -264,71 +279,72 @@
     </style>
 
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "CreativeWork",
-      "name": "Sports Tube Video Blog – The Grade | Genny Allison | AI Content & SEO Portfolio",
-      "alternateName": "Perfect Google PageSpeed Insights Score – AI-Powered SEO Project",
-      "url": "https://sports-tube.netlify.app/",
-      "author": {
-        "@type": "Person",
-        "name": "Genny Allison",
-        "url": "https://codecreations.netlify.app/",
-        "sameAs": [
-          "https://www.linkedin.com/in/genny-allison",
-          "https://github.com/Allison2002"
-        ]
-      },
-      "publisher": {
-        "@type": "Organization",
-        "name": "Allison Stock Inc.",
-        "logo": {
-          "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748537741/footer-logo.avif",
-          "width": 200,
-          "height": 200,
-          "description": "Logo for Allison Stock Inc., the personal brand of Genny Allison"
-        }
-      },
-      "description": "This portfolio case study by Genny Allison showcases how she achieved a perfect 100/100 Google PageSpeed Insights score using AI-generated content and SEO optimization strategies. It highlights improvements in Core Web Vitals, optimized media delivery, and fast-loading AI-powered web design.",
-      "keywords": [
-        "AI content creation",
-        "SEO optimization",
-        "Google PageSpeed Insights 100/100",
-        "Core Web Vitals",
-        "Web performance",
-        "AI-powered websites",
-        "SEO specialist portfolio",
-        "AI Content Creator"
-      ],
-      "image": [
-        {
-          "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748537741/sports-tube-mobile_j2lush.avif",
-          "width": 328,
-          "height": 352,
-          "description": "Hero image of Sports Tube Video Blog homepage showcasing responsive, SEO-optimized design"
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "Sports Tube Video Blog – The Grade | Genny Allison | AI Content & SEO Portfolio",
+        "alternateName": "Perfect Google PageSpeed Insights Score – AI-Powered SEO Project",
+        "url": "https://sports-tube.netlify.app/",
+        "author": {
+          "@type": "Person",
+          "name": "Genny Allison",
+          "url": "https://codecreations.netlify.app/",
+          "sameAs": [
+            "https://www.linkedin.com/in/genny-allison",
+            "https://github.com/Allison2002"
+          ]
         },
-        {
-          "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748537741/sports-tube-desktop-score.avif",
-          "description": "Sports Tube Video Blog desktop PageSpeed Insights score showing perfect Core Web Vitals and 100/100 performance"
+        "publisher": {
+          "@type": "Organization",
+          "name": "Allison Stock Inc.",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748537741/footer-logo.avif",
+            "width": 200,
+            "height": 200,
+            "description": "Logo for Allison Stock Inc., the personal brand of Genny Allison"
+          }
         },
-        {
-          "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748537741/sports-tube-mobile-score.avif",
-          "description": "Sports Tube Video Blog mobile PageSpeed Insights score showing optimized performance and SEO best practices"
-        },
-        {
-          "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748537741/sports-tube-hubspot-score.avif",
-          "description": "HubSpot grade showing SEO performance score for Sports Tube Video Blog"
-        }
-      ],
-      "datePublished": "2025-06-03",
-      "inLanguage": "en"
-    }
+        "description": "This portfolio case study by Genny Allison showcases how she achieved a perfect 100/100 Google PageSpeed Insights score using AI-generated content and SEO optimization strategies. It highlights improvements in Core Web Vitals, optimized media delivery, and fast-loading AI-powered web design.",
+        "keywords": [
+          "AI content creation",
+          "SEO optimization",
+          "Google PageSpeed Insights 100/100",
+          "Core Web Vitals",
+          "Web performance",
+          "AI-powered websites",
+          "SEO specialist portfolio",
+          "AI Content Creator"
+        ],
+        "image": [
+          {
+            "@type": "ImageObject",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748537741/sports-tube-mobile_j2lush.avif",
+            "width": 328,
+            "height": 352,
+            "description": "Hero image of Sports Tube Video Blog homepage showcasing responsive, SEO-optimized design"
+          },
+          {
+            "@type": "ImageObject",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748537741/sports-tube-desktop-score.avif",
+            "description": "Sports Tube Video Blog desktop PageSpeed Insights score showing perfect Core Web Vitals and 100/100 performance"
+          },
+          {
+            "@type": "ImageObject",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748537741/sports-tube-mobile-score.avif",
+            "description": "Sports Tube Video Blog mobile PageSpeed Insights score showing optimized performance and SEO best practices"
+          },
+          {
+            "@type": "ImageObject",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748537741/sports-tube-hubspot-score.avif",
+            "description": "HubSpot grade showing SEO performance score for Sports Tube Video Blog"
+          }
+        ],
+        "datePublished": "2025-06-03",
+        "inLanguage": "en"
+      }
     </script>
+
 
     <script type="application/ld+json">
       {
