--- a/pages/project3/project3-the-casestudy.html
+++ b/pages/project3/project3-the-casestudy.html
@@ -5,6 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sports Tube Community Case Study | Genny Allison | AI Content & SEO Portfolio</title>
     <meta name="description" content="Explore the Sports Tube Community case study by Genny Allison—an AI Content Creator & SEO Specialist. See how AI tools and SEO strategies powered a fast, accessible, and high-ranking sports blog featured in her AI content and SEO portfolio." />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Tech Trends Project Case Study | Genny Allison | AI Content & SEO Portfolio" />
+    <meta property="og:description" content="Discover how Genny Allison used AI content creation and SEO strategies to build a responsive, fast-loading sports blog. Explore Core Web Vitals, PageSpeed optimization, and accessible design in this case study." />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project3/project3-the-casestudy" />
+    <meta property="og:site_name" content="Genny Allison Portfolio" />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tech Trends Project Case Study | AI Content & SEO Portfolio" />
+    <meta name="twitter:description" content="Genny Allison’s portfolio case study on building a high-performance, AI-powered, SEO-optimized sports blog with perfect PageSpeed Insights scores." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta name="twitter:site" content="@GennyAllison" />
+    <meta name="twitter:creator" content="@GennyAllison" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
 
@@ -269,7 +284,12 @@
         "headline": "Tech Trends Project Case Study | Genny Allison | AI Content & SEO Portfolio",
         "alternativeHeadline": "AI Creator & SEO Specialist Sports Blog Case Study",
         "description": "Discover how Genny Allison, an AI Content Creator and SEO Specialist, built a responsive, high-ranking sports blog using advanced AI tools, keyword research, and Google PageSpeed techniques. This case study highlights her AI-powered portfolio work in content creation, SEO strategy, and web performance optimization.",
-        "image": "https://res.cloudinary.com/dnptzisuf/image/upload/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif",
+        "image": {
+          "@type": "ImageObject",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_1458,h_948/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif",
+          "width": 1458,
+          "height": 948
+        },
         "author": {
           "@type": "Person",
           "name": "Genny Allison",
@@ -284,12 +304,14 @@
           "name": "Allison Stock Inc.",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1746550266/allisonstock-logo_xgohg9.avif"
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_484,h_210/v1746550266/allisonstock-logo_xgohg9.avif",
+            "width": 484,
+            "height": 210
           }
         },
         "mainEntityOfPage": {
           "@type": "WebPage",
-          "@id": "https://sports-tube-community.netlify.app"
+          "@id": "https://gennyallison.netlify.app/pages/project3/project3-the-casestudy"
         },
         "datePublished": "2025-06-02",
         "dateModified": "2025-06-02",
@@ -306,6 +328,7 @@
         ]
       }
     </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -326,12 +349,13 @@
           {
             "@type": "ListItem",
             "position": 3,
-            "name": "Sports Tube Video Project",
+            "name": "Tech Trends Project Case Study",
             "item": "https://gennyallison.netlify.app/pages/project3/project3-the-casestudy"
           }
         ]
       }
     </script>
+
   </head>
   <body>
     <header>
