--- a/pages/project3/project3-the-design.html
+++ b/pages/project3/project3-the-design.html
@@ -7,22 +7,22 @@
 
     <meta name="description" content="Explore the design of the Sports Tube Community Project—an AI content creation and SEO portfolio project by Genny Allison. Built for speed, accessibility, and performance using responsive web design and AI-powered content." />
 
-    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+        <!-- Open Graph Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Sports Tube Community Project | The Design | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison" />
-    <meta property="og:description" content="Explore the Sports Tube Community design process, part of Genny Allison's AI content creation and SEO portfolio. Fast, responsive, and optimized for Core Web Vitals." />
+    <meta property="og:title" content="Sports Tube Community Project | The Design | Genny Allison Portfolio" />
+    <meta property="og:description" content="Discover the design behind the Sports Tube Community Project, featuring responsive layout, AI content, and SEO-optimized visuals by Genny Allison." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project3/project3-the-design.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif" />
-    <meta property="og:image:alt" content="Hero image of Sports Tube Community—fast, responsive sports blog project" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
     <meta property="og:site_name" content="Genny Allison Portfolio" />
 
-    <!-- Twitter Card -->
+    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Sports Tube Community Project | The Design | Genny Allison Portfolio" />
-    <meta name="twitter:description" content="Design breakdown of the Sports Tube Community Project, optimized with AI content and SEO. Created by Genny Allison." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif" />
-    <meta name="twitter:image:alt" content="Hero image for Sports Tube Community AI content SEO design project" />
-    <meta name="twitter:creator" content="@allis78978" />
+    <meta name="twitter:title" content="Sports Tube Community Project | The Design" />
+    <meta name="twitter:description" content="See how Genny Allison designed a high-performance, AI-powered sports blog with SEO and responsiveness in mind." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta name="twitter:site" content="@GennyAllison" />
+    <meta name="twitter:creator" content="@GennyAllison" />
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
@@ -314,10 +314,11 @@
               "jobTitle": "AI Content Creator & SEO Specialist"
             },
             "mainEntityOfPage": "https://gennyallison.netlify.app/pages/project3/project3-the-design.html"
-          },
+          }
         ]
       }
     </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
