--- a/pages/project3/project3-the-grade.html
+++ b/pages/project3/project3-the-grade.html
@@ -8,21 +8,21 @@
     <meta name="description" content="Discover how the Sports Tube Community project achieved a perfect 100/100 Google PageSpeed Insights score through AI content, SEO optimization, and Core Web Vitals performance." />
 
         <!-- Open Graph Meta Tags -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Sports Tube Community Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison" />
-    <meta property="og:description" content="Discover how the Sports Tube Community project achieved a perfect 100/100 Google PageSpeed Insights score through AI content, SEO optimization, and Core Web Vitals performance." />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Sports Tube Community Project – The Grade | Genny Allison Portfolio" />
+    <meta property="og:description" content="See how Genny Allison achieved a perfect 100/100 Google PageSpeed Insights score using AI content, SEO strategy, and Core Web Vitals optimization." />
     <meta property="og:url" content="https://sports-tube-community.netlify.app/pages/project3/project3-the-grade.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif" />
-    <meta property="og:image:alt" content="Sports Tube project hero showcasing a fast-loading, responsive sports blog with AI-generated content" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Genny Allison Portfolio" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Sports Tube Community Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison" />
-    <meta name="twitter:description" content="Explore how Genny Allison optimized the Sports Tube Community project for a perfect 100/100 PageSpeed Insights score using AI content, SEO, and Core Web Vitals." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif" />
-    <meta name="twitter:image:alt" content="Fast-loading, AI-powered blog optimization preview of Sports Tube Community" />
-    <meta name="twitter:site" content="@allis78978" />
-
+    <meta name="twitter:title" content="Sports Tube Community Project – The Grade | Genny Allison Portfolio" />
+    <meta name="twitter:description" content="Discover how the Sports Tube Community project earned a perfect 100/100 PageSpeed score through AI content creation and SEO performance." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta name="twitter:creator" content="@allis78978" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
@@ -291,8 +291,14 @@
           "@id": "https://sports-tube-community.netlify.app/pages/project3/project3-the-grade.html"
         },
         "headline": "Sports Tube Community Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison",
-        "description": "Discover how the Sports Tube Community project achieved a perfect 100/100 Google PageSpeed Insights score through AI content, SEO optimization, and Core Web Vitals performance.",
-        "image": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif",
+        "alternativeHeadline": "Achieving 100/100 Google PageSpeed Score with AI Content & SEO",
+        "description": "Discover how the Sports Tube Community project achieved a perfect 100/100 Google PageSpeed Insights score through AI content, SEO optimization, and Core Web Vitals performance improvements.",
+        "image": {
+          "@type": "ImageObject",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif",
+          "width": 1200,
+          "height": 630
+        },
         "author": {
           "@type": "Person",
           "name": "Genny Allison",
@@ -309,13 +315,16 @@
           "name": "Allison Stock Inc.",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_300/v1746550266/allisonstock-logo_xgohg9.avif"
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_300/v1746550266/allisonstock-logo_xgohg9.avif",
+            "width": 300,
+            "height": 130
           }
         },
         "datePublished": "2025-06-06",
         "dateModified": "2025-06-06"
       }
     </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
