--- a/pages/project4/project4-intro.html
+++ b/pages/project4/project4-intro.html
@@ -7,21 +7,21 @@
     <meta name="description" content="Explore the Texas Remodelers WordPress project by AI Content Creator & SEO Specialist Genny Allison—featuring AI content, responsive design, and PageSpeed optimization in progress.">
 
         <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Texas Remodelers WordPress Project | AI Content & SEO Portfolio by Genny Allison" />
-    <meta property="og:description" content="Explore the Texas Remodelers WordPress project showcasing AI-generated content, responsive WordPress design, and SEO optimization in progress." />
-    <meta property="og:url" content="https://texas-remodelers-sample.netlify.app/pages/project4/project4-intro.html" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif" />
-    <meta property="og:image:alt" content="Texas Remodelers WordPress Project with AI-powered content, responsive layout, and SEO in progress" />
-    <meta property="og:site_name" content="Genny Allison Portfolio - Allison Stock Inc." />
+    <meta property="og:title" content="Texas Remodelers WordPress Project | AI Content & SEO Portfolio by Genny Allison" />
+    <meta property="og:description" content="Explore the Texas Remodelers WordPress project created by AI Content Creator & SEO Specialist Genny Allison. Featuring AI-generated content, SEO optimization, responsive design, and Core Web Vitals improvements." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project4/project4-intro.html" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/texas-remodelers-hero-desktop_auvn6l.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="780" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Texas Remodelers WordPress Project | Genny Allison Portfolio" />
-    <meta name="twitter:description" content="Professional WordPress site using AI-generated content and SEO strategy. View this in-progress showcase of responsive design and optimization." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif" />
-    <meta name="twitter:image:alt" content="Preview of Texas Remodelers WordPress Project with responsive design and SEO in progress" />
-    <meta name="twitter:site" content="@allis78978" />
+    <meta name="twitter:title" content="Texas Remodelers WordPress Project | AI Content & SEO Portfolio by Genny Allison" />
+    <meta name="twitter:description" content="This WordPress project showcases AI content, responsive design, and PageSpeed optimization by Genny Allison." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/texas-remodelers-hero-desktop_auvn6l.jpg" />
+    <meta name="twitter:url" content="https://gennyallison.netlify.app/pages/project4/project4-intro.html" />
+
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -287,10 +287,10 @@
         "@type": "CollectionPage",
         "name": "Texas Remodelers WordPress Project | AI Content & SEO Portfolio by Genny Allison",
         "description": "Explore the Texas Remodelers WordPress project created by AI Content Creator & SEO Specialist Genny Allison. Featuring AI-generated content, SEO optimization, responsive design, and a transparent look into Core Web Vitals performance improvement.",
-        "url": "https://texas-remodelers-sample.netlify.app/pages/project4/project4-intro.html",
+        "url": "https://gennyallison.netlify.app/pages/project4/project4-intro.html",
         "image": {
           "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1458,h_948/texas-remodelers-hero-desktop_auvn6l.jpg",
           "width": 1458,
           "height": 948,
           "caption": "Texas Remodelers WordPress Project — AI-powered content, responsive layout, and SEO optimization in progress"
@@ -299,22 +299,22 @@
           {
             "@type": "WebPage",
             "name": "The Grade | PageSpeed Insights Optimization",
-            "url": "https://texas-remodelers-sample.netlify.app/pages/project4/project4-the-grade.html"
+            "url": "https://gennyallison.netlify.app/pages/project4/project4-the-grade.html"
           },
           {
             "@type": "WebPage",
             "name": "The Case Study | SEO & AI Content Strategy",
-            "url": "https://texas-remodelers-sample.netlify.app/pages/project4/project4-the-casestudy.html"
+            "url": "https://gennyallison.netlify.app/pages/project4/project4-the-casestudy.html"
           },
           {
             "@type": "WebPage",
             "name": "The Design | UI/UX and Visual Strategy",
-            "url": "https://texas-remodelers-sample.netlify.app/pages/project4/project4-the-design.html"
+            "url": "https://gennyallison.netlify.app/pages/project4/project4-the-design.html"
           },
           {
             "@type": "WebPage",
             "name": "The Finale | Live WordPress Deployment",
-            "url": "https://texas-remodelers-sample.netlify.app/"
+            "url": "https://gennyallison.netlify.app/projects/texas-remodelers"
           },
           {
             "@type": "WebPage",
@@ -324,7 +324,7 @@
           {
             "@type": "WebPage",
             "name": "Sister Blog | Texas Remodelers Blog",
-            "url": "https://texas-remodelers-sample.netlify.app/texas-remodelers-blog/"
+            "url": "https://gennyallison.netlify.app/texas-remodelers-blog/"
           }
         ],
         "creator": {
@@ -345,7 +345,7 @@
           "url": "https://gennyallison.netlify.app",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1746550266/allisonstock-logo_xgohg9.avif",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_484,h_210/allisonstock-logo_xgohg9.jpg",
             "width": 484,
             "height": 210
           }
@@ -365,6 +365,7 @@
         ]
       }
     </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
