--- a/pages/project4/project4-the-casestudy.html
+++ b/pages/project4/project4-the-casestudy.html
@@ -2,27 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tech Trends Project Case Study | Genny Allison | AI Content & SEO Portfolio</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">   
     <meta name="description" content="Explore how Genny Allison, a WordPress Developer and SEO Specialist, rebuilt and optimized the Texas Remodelers site using AI content, Core Web Vitals techniques, and strategic SEO practices in this case study." />
-
+    <title>Tech Trends Project Case Study | Genny Allison | AI Content & SEO Portfolio</title>
         <!-- Open Graph Meta Tags -->
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="Texas Remodelers WordPress Case Study | Genny Allison | AI Content & SEO Specialist" />
-    <meta property="og:description" content="Discover how Genny Allison rebuilt and optimized the Texas Remodelers site using AI tools, WordPress, and SEO strategies to recover and redeploy a fast, accessible website." />
-    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project3/project3-the-casestudy.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif" />
-    <meta property="og:image:alt" content="Intro page for Texas Remodelers WordPress Project showcasing AI-generated content and responsive layout" />
-    <meta property="og:site_name" content="Genny Allison Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Texas Remodelers Project Case Study | AI Content & SEO Portfolio | Genny Allison" />
+    <meta property="og:description" content="Explore how Genny Allison used AI tools, SEO strategy, and WordPress recovery techniques to build a fast, optimized remodeling website. This portfolio case study showcases her web performance and content skills." />
+    <meta property="og:url" content="https://texas-remodelers-sample.netlify.app/pages/project4/project4-the-casestudy.html" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg" />
+    <meta property="og:image:alt" content="Screenshot of the Texas Remodelers case study page showing a WordPress-based remodeling project with AI-powered enhancements." />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Texas Remodelers WordPress Case Study | Genny Allison | AI Content & SEO Specialist" />
-    <meta name="twitter:description" content="Explore how Genny Allison used AI and SEO tools to restore and optimize the Texas Remodelers website—an evolving WordPress portfolio case study." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif" />
-    <meta name="twitter:image:alt" content="Preview of the Texas Remodelers website rebuild showing AI-driven SEO work in progress" />
-    <meta name="twitter:creator" content="@allis78978" />
-
+    <meta name="twitter:title" content="Texas Remodelers Case Study | AI SEO Portfolio | Genny Allison" />
+    <meta name="twitter:description" content="Case study: How Genny Allison optimized a remodeling website using WordPress, AI-generated content, and SEO best practices." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg" />
+    <meta name="twitter:image:alt" content="Texas Remodelers Case Study preview image from Genny Allison's portfolio." />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
@@ -285,7 +281,7 @@
         "@context": "https://schema.org",
         "@type": "CreativeWork",
         "name": "Texas Remodelers Project Case Study",
-        "headline": "Tech Trends Project Case Study | Genny Allison | AI Content & SEO Portfolio",
+        "headline": "Texas Remodelers Project Case Study | Genny Allison | AI Content & SEO Portfolio",
         "description": "Explore the Texas Remodelers case study by Genny Allison—an AI Content Creator & SEO Specialist. Learn how AI tools, SEO strategies, and WordPress recovery techniques powered a fast, accessible, and evolving remodeling site featured in her professional portfolio.",
         "author": {
           "@type": "Person",
@@ -303,17 +299,19 @@
           "name": "Allison Stock Inc.",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_484,h_210,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_484,h_210/v1746550266/allisonstock-logo_xgohg9.jpg",
+            "width": 484,
+            "height": 210
           }
         },
-        "url": "https://texas-remodelers-sample.netlify.app/",
+        "url": "https://texas-remodelers-sample.netlify.app/pages/project4/project4-the-casestudy.html",
         "mainEntityOfPage": {
           "@type": "WebPage",
-          "@id": "https://gennyallison.netlify.app/pages/project3/project3-the-casestudy.html"
+          "@id": "https://texas-remodelers-sample.netlify.app/pages/project4/project4-the-casestudy.html"
         },
         "image": {
           "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg",
           "width": 1458,
           "height": 948
         },
@@ -334,6 +332,7 @@
         }
       }
     </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
