--- a/pages/project4/project4-the-design.html
+++ b/pages/project4/project4-the-design.html
@@ -3,26 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Explore the design process behind Texas Remodelers, a WordPress project by Genny Allison. This SEO portfolio piece highlights AI-generated content, responsive layouts, and modern web design techniques tailored for commercial remodeling websites." />
     <title>Texas Remodelers Project | The Design | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
 
-    <meta name="description" content="Explore the design process behind Texas Remodelers, a WordPress project by Genny Allison. This SEO portfolio piece highlights AI-generated content, responsive layouts, and modern web design techniques tailored for commercial remodeling websites." />
-
     <!-- Open Graph Meta Tags -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Texas Remodelers Project | The Design | AI Content & SEO Portfolio | Genny Allison" />
-    <meta property="og:description" content="Discover how Genny Allison designed and optimized the Texas Remodelers WordPress site using AI-generated content, responsive design, and SEO strategies tailored for commercial remodeling." />
-    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project4/project4-the-design.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg" />
-    <meta property="og:image:alt" content="Preview of Texas Remodelers WordPress site featuring AI-powered SEO design for a remodeling business" />
-    <meta property="og:site_name" content="Genny Allison | AI Content & SEO Specialist Portfolio" />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Texas Remodelers Project | The Design | AI Content & SEO Portfolio by Genny Allison">
+    <meta property="og:description" content="Explore the design process behind the Texas Remodelers WordPress project. See how AI content, responsive layout, and SEO strategy come together in this high-performance portfolio piece.">
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project4/project4-the-design.html">
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg">
 
     <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Texas Remodelers Project | The Design | AI Content & SEO Portfolio | Genny Allison" />
-    <meta name="twitter:description" content="Explore the Texas Remodelers design by Genny Allison—a WordPress project showcasing AI content, SEO techniques, and modern layout strategy." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg" />
-    <meta name="twitter:image:alt" content="AI-powered design for a WordPress remodeling project by Genny Allison" />
-    <meta name="twitter:creator" content="@allis78978" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Texas Remodelers Project | The Design | AI Content & SEO Portfolio by Genny Allison">
+    <meta name="twitter:description" content="Explore the design process of the Texas Remodelers project — a fast, AI-powered, SEO-optimized WordPress site designed by Genny Allison.">
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg">
+    <meta name="twitter:url" content="https://gennyallison.netlify.app/pages/project4/project4-the-design.html">
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -288,6 +284,24 @@
         "name": "Texas Remodelers Project | The Design | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison",
         "url": "https://gennyallison.netlify.app/pages/project4/project4-the-design.html",
         "description": "Explore the design process behind Texas Remodelers, a WordPress portfolio project by Genny Allison. Featuring AI-generated content, responsive design, and SEO-optimized layouts tailored for a commercial remodeling website.",
+        "inLanguage": "en",
+        "mainEntity": {
+          "@type": "CreativeWork",
+          "headline": "Texas Remodelers Project | The Design",
+          "about": [
+            "WordPress development",
+            "AI-generated content",
+            "SEO optimization",
+            "responsive layout"
+          ],
+          "image": {
+            "@type": "ImageObject",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg",
+            "width": 1458,
+            "height": 948
+          },
+          "datePublished": "2025-06-06"
+        },
         "author": {
           "@type": "Person",
           "name": "Genny Allison",
@@ -308,17 +322,10 @@
             "width": 336,
             "height": 138
           }
-        },
-        "mainEntity": {
-          "@type": "CreativeWork",
-          "headline": "Texas Remodelers Project | The Design",
-          "about": "WordPress development, AI-generated content, SEO optimization, responsive layout",
-          "image": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,c_fill,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif",
-          "datePublished": "2025-06-06",
-          "inLanguage": "en"
         }
       }
     </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
