--- a/pages/project4/project4-the-grade.html
+++ b/pages/project4/project4-the-grade.html
@@ -7,20 +7,22 @@
 
     <meta name="description" content="Genny Allison's AI Content Creator & SEO Specialist portfolio project showcases how she achieved a 100/100 PageSpeed Insights score through Core Web Vitals optimization, performance-driven design, and AI-powered image and content enhancements.">
 
-        <!-- Open Graph Meta Tags -->
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Texas Remodelers Project | The Grade | AI Content & SEO Portfolio | Genny Allison">
-    <meta property="og:description" content="Explore how Genny Allison achieved a perfect 100/100 PageSpeed Insights score for the Texas Remodelers project using AI content, Core Web Vitals optimization, and responsive WordPress design.">
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif">
-    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project3/project3-the-grade.html">
-    <meta property="og:site_name" content="Genny Allison | AI Content & SEO Specialist">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Texas Remodelers Project | The Grade | Genny Allison Portfolio" />
+    <meta property="og:description" content="Explore how Genny Allison achieved a perfect 100/100 PageSpeed Insights score with the Texas Remodelers project using AI content, SEO optimization, and Core Web Vitals performance." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project4/project4-the-grade.html" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Genny Allison Portfolio" />
 
     <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Texas Remodelers Project | The Grade | AI SEO Portfolio">
-    <meta name="twitter:description" content="100/100 Google PageSpeed score, AI content, and WordPress optimization by Genny Allison. See the performance results and strategy breakdown.">
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif">
-    <meta name="twitter:creator" content="@allis78978">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Texas Remodelers Project | The Grade | Genny Allison Portfolio" />
+    <meta name="twitter:description" content="See how Genny Allison used AI tools and SEO techniques to optimize Core Web Vitals and achieve a perfect PageSpeed score for this WordPress project." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg" />
+    <meta name="twitter:site" content="@allis78978" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
@@ -285,43 +287,39 @@
         "@context": "https://schema.org",
         "@type": "WebPage",
         "name": "Texas Remodelers Project | The Grade",
-        "url": "https://gennyallison.netlify.app/pages/project3/project3-the-grade.html",
+        "url": "https://gennyallison.netlify.app/pages/project4/project4-the-grade.html",
         "description": "Genny Allison's AI Content Creator & SEO Specialist portfolio project showcases how she achieved a 100/100 PageSpeed Insights score through Core Web Vitals optimization, performance-driven design, and AI-powered image and content enhancements.",
-        "mainEntity": {
-          "@type": "CreativeWorkSeries",
-          "name": "Texas Remodelers Project",
-          "url": "https://gennyallison.netlify.app/pages/project3/project3-intro.html",
-          "description": "A WordPress-based site rebuilt after technical disruption, focused on SEO optimization and AI-powered content for a commercial remodeling concept.",
-          "author": {
-            "@type": "Person",
-            "name": "Genny Allison",
-            "url": "https://www.linkedin.com/in/genny-allison/"
-          },
-          "publisher": {
-            "@type": "Organization",
-            "name": "Allison Stock Inc.",
-            "logo": {
-              "@type": "ImageObject",
-              "url": "https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_336,h_138/v1746551086/allisonstock-white-nav-logo_tklcra.png"
-            }
-          }
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://gennyallison.netlify.app/pages/project4/project4-the-grade.html"
         },
         "image": {
           "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.jpg",
           "width": 1458,
           "height": 948,
           "caption": "Intro page for Texas Remodelers WordPress Project showcasing AI-generated content, showing SEO optimization in progress, and responsive layout"
         },
-        "creator": {
+        "author": {
           "@type": "Person",
           "name": "Genny Allison",
           "url": "https://gennyallison.netlify.app"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Allison Stock Inc.",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_336,h_138/v1746551086/allisonstock-white-nav-logo_tklcra.png",
+            "width": 336,
+            "height": 138
+          }
         },
         "datePublished": "2025-06-06",
         "inLanguage": "en-US"
       }
     </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
