--- a/pages/project5/project5-the-design.html
+++ b/pages/project5/project5-the-design.html
@@ -3,25 +3,27 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Parent Tech Support Redesign | WordPress & Elementor Client Project | Genny Allison</title>
     <meta name="description" content="Explore Genny Allison’s UI/UX-focused redesign of the Parent Tech Support website using WordPress and Elementor. Featuring improved layouts, newsletter integration, and mobile optimization for video and article blogs." />
+    <title>Parent Tech Support Redesign | WordPress & Elementor Client Project | Genny Allison</title>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
+    <!-- Open Graph Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Parent Tech Support Website Redesign | WordPress & Elementor | Genny Allison" />
-    <meta property="og:description" content="UI/UX-focused redesign of Parent Tech Support using WordPress and Elementor. Explore live links, client feedback, and layout enhancements." />
+    <meta property="og:title" content="Parent Tech Support Redesign | WordPress & Elementor Client Project" />
+    <meta property="og:description" content="Explore Genny Allison’s UI/UX-focused redesign of the Parent Tech Support site using WordPress and Elementor. Featuring responsive layout improvements, newsletter integration, and optimized article/video blog structure." />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749668000/parent-tech-support-hero-desktop.jpg" />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project5/project5-the-design.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1749258015/parent-tech-hero-desktop_yxscgx.avif" />
-    <meta property="og:image:alt" content="Hero image of Parent Tech Support redesign project showing responsive layout and WordPress integration" />
     <meta property="og:site_name" content="Genny Allison Portfolio" />
+
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Parent Tech Support Website Redesign | WordPress & Elementor | Genny Allison" />
-    <meta name="twitter:description" content="Explore Genny Allison’s UI/UX-focused WordPress redesign of Parent Tech Support, featuring improved layouts, mobile responsiveness, and a polished article & video blog." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1749258015/parent-tech-hero-desktop_yxscgx.avif" />
-    <meta name="twitter:image:alt" content="Screenshot of the redesigned Parent Tech Support website showing clean UI with WordPress & Elementor" />
-    <meta name="twitter:site" content="@allis78978" />
-    <meta name="twitter:creator" content="@allis78978" />
+    <meta name="twitter:title" content="Parent Tech Support Redesign | WordPress & Elementor Client Project" />
+    <meta name="twitter:description" content="See how Genny Allison improved the layout and responsiveness of the Parent Tech Support WordPress site using Elementor. Featuring blog optimization and UI/UX enhancements." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1749668000/parent-tech-support-hero-desktop.jpg" />
+    <meta name="twitter:site" content="@GennyAllison" />
+    <meta name="twitter:creator" content="@GennyAllison" />
+
 
     
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
@@ -291,14 +293,15 @@
         "inLanguage": "en-US",
         "isPartOf": {
           "@type": "WebSite",
-          "@id": "https://gennyallison.netlify.app",
-          "name": "Genny Allison Portfolio"
+          "@id": "https://gennyallison.netlify.app/",
+          "name": "Genny Allison Portfolio",
+          "url": "https://gennyallison.netlify.app/"
         },
         "author": {
           "@type": "Person",
           "name": "Genny Allison",
-          "url": "https://www.linkedin.com/in/genny-allison/",
-          "jobTitle": "AI Content Creator & SEO Specialist"
+          "jobTitle": "AI Content Creator & SEO Specialist",
+          "url": "https://www.linkedin.com/in/genny-allison/"
         },
         "publisher": {
           "@type": "Organization",
@@ -311,9 +314,13 @@
             "height": 138
           }
         },
-        "mainEntityOfPage": "https://gennyallison.netlify.app/pages/project5/project5-the-design.html"
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://gennyallison.netlify.app/pages/project5/project5-the-design.html"
+        }
       }
     </script>
+
 
     <script type="application/ld+json">
       {
