--- a/pages/project1/project1-the-casestudy.html
+++ b/pages/project1/project1-the-casestudy.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tech Trends Project Case Study | Genny Allison | AI Content & SEO Portfolio</title>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Tech Trends Project Case Study | Genny Allison" />
+    <meta property="og:description" content="Explore Genny Allison’s Tech Trends Project—an AI-powered case study featuring SEO-optimized content, responsive design, and lightning-fast performance." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project1/project1-the-casestudy" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.jpg" />
+    <meta property="og:image:alt" content="Tech Trends Project Case Study by Genny Allison – Responsive design, SEO optimization, and AI-powered content" />
+    <meta property="og:site_name" content="Genny Allison Portfolio" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tech Trends Project Case Study | Genny Allison" />
+    <meta name="twitter:description" content="AI-powered web project case study by Genny Allison. Learn how she created SEO-optimized, high-performance content with responsive design." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.jpg" />
+    <meta name="twitter:image:alt" content="Genny Allison's AI Content & SEO Case Study" />
+
     <meta name="description" content="Explore Genny Allison’s Tech Trends Project—an AI-powered case study featuring SEO-optimized content, responsive design, and lightning-fast performance.">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -70,15 +86,15 @@
         "@context": "https://schema.org",
         "@type": "WebPage",
         "name": "Tech Trends Project Case Study | Genny Allison",
-        "url": "https://tech-trends-blog.netlify.app/projects/project1-the-casestudy.html",
+        "url": "https://gennyallison.netlify.app/pages/project1/project1-the-casestudy",
         "description": "Explore Genny Allison’s Tech Trends Project—an AI-powered case study featuring SEO-optimized content, responsive design, and lightning-fast performance.",
         "inLanguage": "en",
         "datePublished": "2024-11-15",
         "dateModified": "2025-05-19",
         "isPartOf": {
-          "@type": "Blog",
-          "name": "Tech Trends Blog",
-          "url": "https://tech-trends-blog.netlify.app"
+          "@type": "CollectionPage",
+          "name": "Genny Allison Portfolio",
+          "url": "https://gennyallison.netlify.app/pages/collections"
         },
         "breadcrumb": {
           "@type": "BreadcrumbList",
@@ -87,19 +103,19 @@
               "@type": "ListItem",
               "position": 1,
               "name": "Home",
-              "item": "https://tech-trends-blog.netlify.app"
+              "item": "https://gennyallison.netlify.app"
             },
             {
               "@type": "ListItem",
               "position": 2,
               "name": "Projects",
-              "item": "https://tech-trends-blog.netlify.app/projects"
+              "item": "https://gennyallison.netlify.app/pages/collections"
             },
             {
               "@type": "ListItem",
               "position": 3,
               "name": "Tech Trends Case Study",
-              "item": "https://tech-trends-blog.netlify.app/projects/project1-the-casestudy.html"
+              "item": "https://gennyallison.netlify.app/pages/project1/project1-the-casestudy"
             }
           ]
         },
@@ -156,11 +172,12 @@
           "datePublished": "2024-11-15",
           "dateModified": "2025-05-19",
           "image": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.avif",
-          "url": "https://tech-trends-blog.netlify.app/projects/project1-the-casestudy.html",
+          "url": "https://gennyallison.netlify.app/pages/project1/project1-the-casestudy",
           "description": "Case study of Tech Trends Blog by Genny Allison, highlighting AI-generated content, SEO strategies, performance optimization, and accessible web development."
         }
       }
     </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
