--- a/pages/project2/project2-intro.html
+++ b/pages/project2/project2-intro.html
@@ -10,18 +10,22 @@
 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
 
-    <meta property="og:title" content="Sports Tube Video Blog Project | AI Content & SEO Portfolio by Genny Allison" />
-    <meta property="og:description" content="Discover how AI tools and SEO strategy shaped the Sports Tube Project. This interactive portfolio hub links to the case study, performance grade, design wireframes, and contact page." />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,g_auto,w_1458,h_948/v1748537741/sports-tube-desktop_c9qmdx.avif" />
-    <meta property="og:url" content="https://sports-tube.netlify.app/pages/project2/project2-intro.html" />
+    <!-- Open Graph Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Genny Allison | AI Content & SEO Portfolio" />
+    <meta property="og:title" content="Sports Tube Video Blog Project | AI Content & SEO Portfolio by Genny Allison" />
+    <meta property="og:description" content="Explore the Sports Tube Video Blog Project by Genny Allison—an AI-powered portfolio project showcasing SEO-optimized content, responsive design, and a perfect 100 PageSpeed score." />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1748537741/sports-tube-desktop_c9qmdx.jpg" />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project2/project2-intro" />
+    <meta property="og:site_name" content="Genny Allison Portfolio" />
 
+    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Sports Tube Video Blog Project | AI Content & SEO Portfolio by Genny Allison" />
-    <meta name="twitter:description" content="AI-driven content, SEO-focused development, and 100/100 PageSpeed Insights optimization—explore the Sports Tube Project collections page and navigate to key case study sections." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,g_auto,w_1458,h_948/v1748537741/sports-tube-desktop_c9qmdx.avif" />
-    <meta name="twitter:creator" content="@allis78978" />
+    <meta name="twitter:description" content="Explore this AI-powered case study featuring SEO content, web performance, and responsive UI/UX design by Genny Allison." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200,h_630,c_fill/v1748537741/sports-tube-desktop_c9qmdx.jpg" />
+    <meta name="twitter:site" content="@GennyAllison" />
+    <meta name="twitter:creator" content="@GennyAllison" />
+
 
     <!-- Desktop ≥ 941px -->
     <link
@@ -83,12 +87,12 @@
         "@context": "https://schema.org",
         "@type": "CollectionPage",
         "name": "Sports Tube Video Blog Project | AI Content & SEO Portfolio by Genny Allison",
-        "url": "https://sports-tube.netlify.app/pages/project2/project2-intro.html",
+        "url": "https://gennyallison.netlify.app/pages/project2/project2-intro",
         "description": "Explore the Sports Tube Video Blog Project by Genny Allison—an AI-powered case study showcasing SEO content creation, responsive web design, and a 100/100 PageSpeed Insights grade. Navigate to the design, case study, audit grade, and contact info from this interactive hub.",
         "inLanguage": "en",
         "image": {
           "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,g_auto,w_1458,h_948/v1748537741/sports-tube-desktop_c9qmdx.avif",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,g_auto,w_1458,h_948/v1748537741/sports-tube-desktop_c9qmdx.avif",
           "width": 1458,
           "height": 948
         },
@@ -113,22 +117,22 @@
           {
             "@type": "WebPage",
             "name": "The Case Study",
-            "url": "https://sports-tube.netlify.app/pages/project2/project2-the-casestudy.html"
+            "url": "https://gennyallison.netlify.app/pages/project2/project2-the-casestudy"
           },
           {
             "@type": "WebPage",
             "name": "The Grade",
-            "url": "https://sports-tube.netlify.app/pages/project2/project2-the-grade.html"
+            "url": "https://gennyallison.netlify.app/pages/project2/project2-the-grade"
           },
           {
             "@type": "WebPage",
             "name": "The Design",
-            "url": "https://sports-tube.netlify.app/pages/project2/project2-the-design.html"
+            "url": "https://gennyallison.netlify.app/pages/project2/project2-the-design"
           },
           {
             "@type": "WebPage",
             "name": "Contact Me",
-            "url": "https://sports-tube.netlify.app/pages/project2/project2-intro.html#author-bio"
+            "url": "https://gennyallison.netlify.app/pages/project2/project2-intro#author-bio"
           }
         ],
         "publisher": {
@@ -137,13 +141,14 @@
           "url": "https://gennyallison.netlify.app",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_484,h_210,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_484,h_210,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif",
             "width": 242,
             "height": 105
           }
         }
       }
     </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
