--- a/pages/project3/project3-intro.html
+++ b/pages/project3/project3-intro.html
@@ -9,18 +9,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
+    <!-- Open Graph Tags -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Sports Tube Community Blog Project | AI Content & SEO Portfolio by Genny Allison" />
-    <meta property="og:description" content="Explore this high-performance, AI-driven sports blog built for community submissions. See how Genny Allison achieved perfect SEO scores, responsive design, and powerful user engagement with AI content and optimization strategies." />
-    <meta property="og:url" content="https://sports-tube-community.netlify.app/pages/project3/project3-intro.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif" />
-    <meta property="og:image:alt" content="Hero image of the Sports Tube Community Blog Project showcasing AI-generated content and responsive design" />
+    <meta property="og:description" content="Explore the Sports Tube Community Blog Project by Genny Allison—an AI-powered, SEO-optimized blog platform with PageSpeed 100/100 and user-submitted content." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/project3/project3-intro" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
+    <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Sports Tube Community Blog Project | AI Content & SEO Portfolio by Genny Allison" />
-    <meta name="twitter:description" content="Dive into the Sports Tube Community Project—an AI-powered, SEO-optimized blog platform by Genny Allison, featuring user-submitted content and perfect PageSpeed scores." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif" />
-    <meta name="twitter:image:alt" content="Intro screenshot of the Sports Tube Community Blog Project showing responsive layout and AI visuals" />
+    <meta name="twitter:description" content="AI-driven, SEO-optimized blog platform built by Genny Allison. Discover case studies, wireframes, and performance insights." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1748887777/sports-tube-community-hero-desktop_m0ri3y.jpg" />
+
 
     <!-- Desktop ≥ 941px -->
     <link
@@ -75,206 +78,90 @@
 
     <noscript><link rel="stylesheet" href="/styles/styles-article.css"></noscript>
     <noscript><link rel="stylesheet" href="/styles/styles-global.css"></noscript>
-    <style>
-      picture {
-        width: 100%;
-        display: block;
-        margin: 0 auto;
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "CollectionPage",
+        "name": "Sports Tube Community Blog Project | AI Content & SEO Portfolio by Genny Allison",
+        "description": "Explore the Sports Tube Community Blog Project by AI Content Creator & SEO Specialist Genny Allison. This page introduces the AI-powered, SEO-optimized blog platform featuring user-submitted sports articles. Navigate to the full case study, PageSpeed 100/100 grade, wireframe, design concept, and final site launch.",
+        "url": "https://sports-tube-community.netlify.app/pages/project3/project3-intro.html",
+        "image": {
+          "@type": "ImageObject",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_1458,h_948/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif",
+          "width": 1458,
+          "height": 948,
+          "caption": "Hero image of the Sports Tube Community Blog Project showcasing AI-generated content and responsive design"
+        },
+        "hasPart": [
+          {
+            "@type": "WebPage",
+            "name": "The Grade | PageSpeed Insights 100/100",
+            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-grade.html"
+          },
+          {
+            "@type": "WebPage",
+            "name": "The Case Study",
+            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-casestudy.html"
+          },
+          {
+            "@type": "WebPage",
+            "name": "The Design Strategy",
+            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-the-design.html"
+          },
+          {
+            "@type": "WebPage",
+            "name": "The Wireframe",
+            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-wireframe.html"
+          },
+          {
+            "@type": "WebPage",
+            "name": "Final Website",
+            "url": "https://sports-tube-community.netlify.app/"
+          },
+          {
+            "@type": "ContactPage",
+            "name": "Contact Genny Allison",
+            "url": "https://sports-tube-community.netlify.app/pages/project3/project3-intro.html#author-bio"
+          }
+        ],
+        "creator": {
+          "@type": "Person",
+          "name": "Genny Allison",
+          "url": "https://gennyallison.netlify.app",
+          "sameAs": [
+            "https://www.linkedin.com/in/genny-allison/",
+            "https://github.com/Allison2002",
+            "https://x.com/allis78978",
+            "https://www.instagram.com/allison_stock_inc/"
+          ]
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Allison Stock Inc.",
+          "url": "https://gennyallison.netlify.app",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_484,h_210/v1746550266/allisonstock-logo_xgohg9.avif",
+            "width": 484,
+            "height": 210
+          }
+        },
+        "datePublished": "2025-06-02",
+        "dateModified": "2025-06-02",
+        "inLanguage": "en",
+        "keywords": [
+          "AI content creator portfolio",
+          "SEO content specialist",
+          "PageSpeed 100 optimization",
+          "AI website development case study",
+          "responsive web design",
+          "Core Web Vitals optimization",
+          "SEO strategy portfolio",
+          "user-generated sports blog"
+        ]
       }
+    </script>
 
-      img {
-        width: 100%;
-        height: auto;
-        display: block;
-        margin: 0 auto;
-        padding: 0.25em;
-      }
-
-      .canvas-skills-grid {
-        display: flex;
-        flex-direction: row;
-        align-items: stretch;
-        width: 100%;
-        max-width: 100vw;
-        background-color: #000;
-        overflow: hidden;
-        box-sizing: border-box;
-        padding: 0.5rem;
-        contain: layout paint style;
-        aspect-ratio: 1904 / 502;
-      }
-      
-
-      .canvas-skills-grid picture {
-        flex: 0 0 40%;
-        max-width: 40%;
-        display: flex;
-        align-items: stretch;
-        justify-content: center;
-        background-color: #000;
-        box-sizing: border-box;
-        height: auto;
-        aspect-ratio: 1458 / 948;
-      }
-
-      .canvas-skills-grid img {
-        object-position: center;
-        border-top: 1em solid #000;
-        border-left: 1em solid #000;
-        border-right: 0.5em solid #000;
-        border-bottom: 1em solid #000;
-        will-change: transform;
-      }
-
-      img {
-        display: block;
-      }
-
-      img[fetchpriority="high"] {
-        contain: layout paint;
-        content-visibility: auto;
-      }
-
-      /* === TEXT CONTAINER === */
-      .canvas-skills-title {
-        flex: 0 0 60%;
-        max-width: 60%;
-        min-width: 60%;
-        background-color: #fff;
-        border: 1em solid #000;
-        border-left: 0.5em solid #000;
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: stretch;
-        height: auto;
-      }
-
-      .canvas-skills-title h1,
-      .canvas-skills-title h2 {
-        font-family: Georgia, 'Times New Roman', serif;
-        font-weight: normal;
-        font-style: normal;
-        text-align: center;
-        line-height: 1.4;
-        font-display: swap;
-        height: auto;
-        margin: 0;
-      }
-
-      .canvas-skills-title h1 {
-        font-size: clamp(1.5rem, 4vw, 6rem);
-        line-height: 1.8;
-        height: auto;
-        overflow: hidden;
-      }
-
-      .canvas-skills-title h2 {
-        font-size: clamp(1.1rem, 3vw, 3rem);
-        line-height: 1.5;
-        height: auto;
-        overflow: hidden;
-      }
-
-
-      /* === MEDIA QUERIES === */
-
-      /* Tablets: 941px–1024px */
-      @media (min-width: 769px) and (max-width: 1024px) {
-        .canvas-skills-grid {
-          padding: 0.4rem;2
-        }
-
-        .canvas-skills-grid img {
-          border-width: 0.5em;
-        }
-
-        .canvas-skills-title {
-          height: 100%;
-          border-width: 0.5em;
-        }
-      }
-
-
-      /* Mobile landscape & phablets: 481px–768px */
-      @media (min-width: 481px) and (max-width: 768px) {
-        .canvas-skills-grid {
-          padding: 0.3rem;
-        }
-
-        .canvas-skills-grid picture {
-          max-width: 40%;
-        }
-
-        .canvas-skills-grid img {
-          border-width: 0.5em;
-        }
-
-        .canvas-skills-title {
-          min-height: 180px;
-          padding: 0.5rem;
-          border-width: 0.5em;
-        }
-
-        .canvas-skills-title h1 {
-          font-size: 2.2rem;
-        }
-
-        .canvas-skills-title h2 {
-          font-size: 1.5rem;
-        }
-      }
-
-      /* Smallest mobile screens ≤ 480px */
-      @media (max-width: 480px) {
-        .canvas-skills-grid {
-          padding: 0.25rem;
-          height: 200px;
-          width: 480px;  
-        }
-
-        .canvas-skills-grid img {
-          border-width: 0.5em;
-          object-fit: cover;
-          min-height: 168px;
-          object-position: center top;
-
-        }
-
-        .canvas-skills-title {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          min-height: 168px;
-          border-width: 0.5em;
-          width: 100%;
-          max-width: 480px;
-          height: auto;
-          padding-right: 0;
-          margin: 0 auto;
-        }
-
-        .canvas-skills-title h1 {
-          font-size: 1.1rem;
-          height: auto;
-          width: 100%;
-          line-height: 1.6;
-          margin: 0 auto;
-          padding: 0;
-        }
-
-        .canvas-skills-title h2 {
-          font-size: 1rem;
-          height: auto;
-          width: 100%;
-          line-height: 1.5;
-          margin: 0 auto;
-          padding: 0;
-        }
-      }
-
-    </style>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
