--- a/pages/project6/project6-the-design.html
+++ b/pages/project6/project6-the-design.html
@@ -4,23 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Experience the Mario Race Animation project by Genny Allison, a UI/UX-focused animation built using HTML, CSS, and JavaScript. This fun portfolio piece showcases animation principles, responsive layout, and clean design." />
+    <title>Mario Race Animation | HTML CSS JavaScript Animation | Genny Allison</title>
     <!-- Open Graph Meta Tags -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Mario Race Animation | HTML CSS JavaScript Animation | Genny Allison" />
     <meta property="og:description" content="Mario Race is a UI/UX animation project created by Genny Allison using HTML, CSS, and JavaScript. Explore how animation, accessibility, and clean coding practices come together in this interactive piece." />
     <meta property="og:url" content="https://gennyallison.netlify.app/pages/project6/project6-the-design.html" />
-    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1749360000/mario-race-hero-desktop_sample.avif" />
-    <meta property="og:image:alt" content="Mario and Luigi racing in a retro-style browser animation built with HTML, CSS, and JavaScript by Genny Allison" />
-    <meta property="og:site_name" content="Genny Allison Portfolio" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1749360000/mario-race-hero.jpg" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Mario Race Animation | HTML CSS JavaScript | Genny Allison" />
-    <meta name="twitter:description" content="Explore Mario Race — a playful, UI/UX-focused animation using HTML, CSS, and JavaScript. Created by Genny Allison to showcase accessible and responsive animation design." />
-    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1749360000/mario-race-hero-desktop_sample.avif" />
-    <meta name="twitter:image:alt" content="Mario Race animation screenshot showing Mario and Luigi mid-race in a browser-rendered UI/UX demo" />
-    <meta name="twitter:site" content="@allis78978" />
-    <meta name="twitter:creator" content="@allis78978" />
+    <meta name="twitter:title" content="Mario Race Animation | HTML CSS JavaScript Animation | Genny Allison" />
+    <meta name="twitter:description" content="Mario Race is a UI/UX animation project created by Genny Allison using HTML, CSS, and JavaScript. Explore how animation, accessibility, and clean coding practices come together in this interactive piece." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1749360000/mario-race-hero.jpg" />
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
@@ -283,10 +280,10 @@
       {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "@id": "https://gennyallison.netlify.app/pages/project5/project5-the-design.html",
-        "url": "https://gennyallison.netlify.app/pages/project5/project5-the-design.html",
-        "name": "Parent Tech Support Redesign | WordPress & Elementor Client Project",
-        "description": "Explore Genny Allison’s UI/UX-focused redesign of the Parent Tech Support website using WordPress and Elementor. Featuring layout enhancements, responsive design, newsletter integration, and optimized video and article blogs.",
+        "@id": "https://gennyallison.netlify.app/pages/project6/project6-the-design.html",
+        "url": "https://gennyallison.netlify.app/pages/project6/project6-the-design.html",
+        "name": "Mario Race Animation Project | The Design | HTML, CSS, JavaScript Animation by Genny Allison",
+        "description": "Explore the Mario Race animation project, designed by Genny Allison using HTML, CSS, and JavaScript. This portfolio piece demonstrates clean coding, fun UI/UX animation, and accessibility best practices.",
         "inLanguage": "en-US",
         "isPartOf": {
           "@type": "WebSite",
@@ -310,7 +307,7 @@
             "height": 138
           }
         },
-        "mainEntityOfPage": "https://gennyallison.netlify.app/pages/project5/project5-the-design.html"
+        "mainEntityOfPage": "https://gennyallison.netlify.app/pages/project6/project6-the-design.html"
       }
     </script>
 
